moved notebooks dir into project src dir
Former-commit-id: 5dcd07bb2fdfd45e5a29752b1256ac4842fbdaa2
Former-commit-id: 83194de98794ff394e68381b46c50c1f4badf56a

--- a/chapter_signal_preprocessing.ipynb
+++ b/chapter_signal_preprocessing.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "## X-Axis Characterization and Standardisation\n",
     "\n",
-    "We were able to normalize all inter-sample time axes across the dataset and reduce to one universal time axis across the dataset by rounding to a millisecond scale and correcting for a scalar offset that started at time zero. More information can be found at [time_axis_characterisation_and_normalization](notebooks/time_axis_characterisation_and_normalization.ipynb). Primarily, methods for normalizing can be found at [mindex_signal_processing](src/wine_analysis_hplc_uv/signal_processing/mindex_signal_processing.py) `.adjust_timescale` and `.correct_offset`\n"
+    "We were able to normalize all inter-sample time axes across the dataset and reduce to one universal time axis across the dataset by rounding to a millisecond scale and correcting for a scalar offset that started at time zero. More information can be found at [time_axis_characterisation_and_normalization](./src/wine_analysis_hplc_uv/notebooks/time_axis_characterisation_and_normalization.ipynb). Primarily, methods for normalizing can be found at [mindex_signal_processing](src/wine_analysis_hplc_uv/signal_processing/mindex_signal_processing.py) `.adjust_timescale` and `.correct_offset`\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "## Downsampling of Chromatographic Time Series\n",
     "\n",
-    "I have created a proof of concept of dataset compression at [downsampling_signals](notebooks/downsampling_signals.ipynb) through downsampling from 2.5Hz to 0.5Hz without noticable loss of signal information. This showed that downsampling with mean aggregation reduced dataset size by 90% without noticable change in signal shape.  Whatsmore, I found that raw signals required an initial resampling to their current frequency to smooth out local irregularities, that 0 - 20 mins is the most interesting (and easiest to work with) range, and that Euclidean distance is an appropriate and intuitive measure of change during downsampling."
+    "I have created a proof of concept of dataset compression at [downsampling_signals](./src/wine_analysis_hplc_uv/notebooks/downsampling_signals.ipynb) through downsampling from 2.5Hz to 0.5Hz without noticable loss of signal information. This showed that downsampling with mean aggregation reduced dataset size by 90% without noticable change in signal shape.  Whatsmore, I found that raw signals required an initial resampling to their current frequency to smooth out local irregularities, that 0 - 20 mins is the most interesting (and easiest to work with) range, and that Euclidean distance is an appropriate and intuitive measure of change during downsampling."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "source": [
     "## Creating Downsampled Test Dataset\n",
     "\n",
-    "Following the findings of [downsampling_signals](notebooks/downsampling_signals.ipynb), I created a test dataset of 4 shiraz samples in parquet file format at [creating_downsampled_testset](notebooks/creating_downsampled_testset.ipynb) after it was found that reading and writing to parquet was twice as fast as csv, and that parquet preserved the multiindexed nature of the dataframe. In this process, the time axis is corrected and rounded and the dataset is moved to a universal time index. The wine column level is also made unique by the addition of an ascending integer count. The filepath of the test dataset parquet file is here:"
+    "Following the findings of [downsampling_signals](./src/wine_analysis_hplc_uv/notebooks/downsampling_signals.ipynb), I created a test dataset of 4 shiraz samples in parquet file format at [creating_downsampled_testset](./src/wine_analysis_hplc_uv/notebooks/creating_downsampled_testset.ipynb) after it was found that reading and writing to parquet was twice as fast as csv, and that parquet preserved the multiindexed nature of the dataframe. In this process, the time axis is corrected and rounded and the dataset is moved to a universal time index. The wine column level is also made unique by the addition of an ascending integer count. The filepath of the test dataset parquet file is here:"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "source": [
     "## Y-Axis Correction\n",
     "\n",
-    "Utilizing the test dataset created [here](notebooks/creating_downsampled_testset.ipynb), I have proceeded to develop a number of y-axis correction methods. As of 2023-09-04 13:39:25 this only includes subtraction of y[0] to set time zero to y=0. A 'processed' parquet file can be found at:"
+    "Utilizing the test dataset created [here](./src/wine_analysis_hplc_uv/notebooks/creating_downsampled_testset.ipynb), I have proceeded to develop a number of y-axis correction methods. As of 2023-09-04 13:39:25 this only includes subtraction of y[0] to set time zero to y=0. A 'processed' parquet file can be found at:"
    ]
   },
   {
@@ -117,11 +117,12 @@
    "source": [
     "## Baseline Correction\n",
     "\n",
-    "General notes on baseline correction algorithms are currently (2023-09-04 13:48:23) being developed in [baseline_correction](notebooks/baseline_correction.ipynb).\n",
+    "General notes on baseline correction algorithms are currently (2023-09-04 13:48:23) being developed in [baseline_correction](./src/wine_analysis_hplc_uv/notebooks/baseline_correction.ipynb).\n",
     "\n",
-    "A brief investigation on Backcor, a literature recommended baseline correction algorithm for chromatograms was undertaken in [backcor_on_sampleset](notebooks/backcor_on_sampleset.ipynb). Without manually tweaking the parameters it was found to perform poorly on the dataset, especially at the ends.\n",
     "\n",
-    "Following x and y axis preprocessing developed [here](./notebooks/time_axis_characterisation_and_normalization.ipynb) and [here](./notebooks/offset_and_scale_y_axis.ipynb) respectively, an investigation into the different baseline correction methods has been started in [developing_baseline_subtraction](./notebooks/developing_baseline_subtraction.ipynb)."
+    "A brief investigation on Backcor, a literature recommended baseline correction algorithm for chromatograms was undertaken in [backcor_on_sampleset](./src/wine_analysis_hplc_uv/notebooks/backcor_on_sampleset.ipynb). Without manually tweaking the parameters it was found to perform poorly on the dataset, especially at the ends.\n",
+    "\n",
+    "Following x and y axis preprocessing developed [here](././src/wine_analysis_hplc_uv/notebooks/time_axis_characterisation_and_normalization.ipynb) and [here](././src/wine_analysis_hplc_uv/notebooks/offset_and_scale_y_axis.ipynb) respectively, an investigation into the different baseline correction methods has been started in [developing_baseline_subtraction](././src/wine_analysis_hplc_uv/notebooks/developing_baseline_subtraction.ipynb)."
    ]
   },
   {
@@ -130,7 +131,7 @@
    "source": [
     "## Signal Smoothing\n",
     "\n",
-    "A prefunctory investigation into the appliation of Savitzky-Golay smoothing has been started in [investigating_signal_smoothing](./notebooks/investigating_signal_smoothing.ipynb), but as of 2023-09-07 14:48:51 hasn't gotten very far."
+    "A prefunctory investigation into the appliation of Savitzky-Golay smoothing has been started in [investigating_signal_smoothing](././src/wine_analysis_hplc_uv/notebooks/investigating_signal_smoothing.ipynb), but as of 2023-09-07 14:48:51 hasn't gotten very far."
    ]
   },
   {
@@ -147,11 +148,11 @@
     "\n",
     "### Identifying Representative sample\n",
     "\n",
-    "A method of identifying a representative sample as been established in [identifying_most_similar_signal](./notebooks/identifying_most_similar_signal.ipynb) and added to SignalProcessor as `most_correlated`. It uses the pandas built-in method `.corr` to construct a correlation matrix then return the samplecode idx object of the sample with the highest mean correlation.\n",
+    "A method of identifying a representative sample as been established in [identifying_most_similar_signal](././src/wine_analysis_hplc_uv/notebooks/identifying_most_similar_signal.ipynb) and added to SignalProcessor as `most_correlated`. It uses the pandas built-in method `.corr` to construct a correlation matrix then return the samplecode idx object of the sample with the highest mean correlation.\n",
     "\n",
     "### DTW\n",
     "\n",
-    "A method of applying DTW utilising `most_correlated` will be developed in [Dynamic Time Warping](./notebooks/dynamic_time_warping.ipynb)"
+    "A method of applying DTW utilising `most_correlated` will be developed in [Dynamic Time Warping](././src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb)"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "source": [
     "## Observation of The Derivatives of Chromatographic signals\n",
     "\n",
-    "It is well-known that the first and second derivatives of a chromatographic signal can be used for peak detection. [This notebook](notebooks/derivatives_of_chromatograms.ipynb) is intended to investigate their behavior and see whether they can be useful in dashboard level signal visualisation.\n"
+    "It is well-known that the first and second derivatives of a chromatographic signal can be used for peak detection. [This notebook](./src/wine_analysis_hplc_uv/notebooks/derivatives_of_chromatograms.ipynb) is intended to investigate their behavior and see whether they can be useful in dashboard level signal visualisation.\n"
    ]
   }
  ],
