turned relplot  index creation into a class
Former-commit-id: 0d4bc236e39d7d27af6ae77e5e986eebb90d83c9
Former-commit-id: db96ec6d8ba6b2e4cbb36b6b288d36babb2d39eb

--- a/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
@@ -633,19 +633,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "a = df.columns.to_frame(index=False).set_index([\"samplecode\", \"wine\", \"state\"]).loc[~a.index.duplicated(keep='first'),:]\n",
-    "display(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ref_idx = a.loc[idx[:, :, 'ref']].assign(subplot=\"1\").index"
+    " column_index_df = df.columns.to_frame(index=False).set_index([\"samplecode\", \"wine\", \"state\"]).loc[lambda df: ~df.index.duplicated(keep='first'),:]\n",
+    "display(column_index_df)"
    ]
   },
   {
@@ -664,7 +653,7 @@
     "| sample1 | row1 | col3 | query |\n",
     "| sample1 | row1 | col3 | align |\n",
     "\n",
-    "do for each, then concat horizontally.\n",
+    "do for each row then conct horizontally\n",
     "\n",
     "The iteration pattern is:\n",
     "\n",
@@ -676,100 +665,103 @@
     "    for column in range(0:2):\n",
     "        col1 = \n",
     "\"\"\"\n",
-    "\n",
-    "samples = a.index.get_level_values(\"samplecode\").unique()\n",
-    "\n",
-    "\n",
-    "# get sample row\n",
-    "def build_col1(df, sample_id):\n",
-    "    \"\"\"\n",
-    "    combine query and reference for overlaying in col1\n",
-    "    \"\"\"\n",
+    "class RelPlotIndexBuilder:\n",
     "    \n",
-    "    if sample_id=='176':\n",
-    "        sample = df.loc[idx[sample_id, :, \"ref\"], :]\n",
+    "    def __init__(self, df):\n",
     "    \n",
-    "    else:\n",
-    "        sample = df.loc[idx[sample_id, :, \"query\"], :]\n",
-    "\n",
-    "\n",
-    "    # get the reference row, reindex it so its 'wine' (row) is s1\n",
-    "    \n",
-    "    if sample_id=='176':\n",
-    "        ref=df.loc[idx[:,:,'ref'],:]\n",
-    "    \n",
-    "    else:\n",
-    "        wine = sample.index.get_level_values(\"wine\")\n",
-    "        ref = df.loc[idx[:, :, \"ref\"], :].pipe(\n",
-    "            lambda df: df.set_axis(\n",
-    "                df.index.remove_unused_levels().set_levels(level=[\"wine\"], levels=[wine])\n",
-    "            )\n",
-    "        )\n",
-    "\n",
-    "    # assign row and column identifier to reference and sample rows\n",
-    "    col1 = pd.concat([sample, ref]).assign(col=1)\n",
-    "\n",
-    "    return col1\n",
-    "\n",
-    "\n",
-    "def build_col2(df, sample_id):\n",
-    "    \"\"\"\n",
-    "    combine aligned and reference for overlaying in col1\n",
-    "    \"\"\"\n",
-    "    if sample_id=='176':\n",
-    "        sample = df.loc[idx[sample_id, :, \"ref\"], :]\n",
-    "    \n",
-    "    else:\n",
-    "        sample = df.loc[idx[sample_id, :, \"aligned\"], :]\n",
-    "\n",
-    "\n",
-    "    # get the reference row, reindex it so its 'wine' (row) is s1\n",
-    "    \n",
-    "    if sample_id=='176':\n",
-    "        ref=sample.copy()\n",
-    "    \n",
-    "    else:\n",
-    "        wine = sample.index.get_level_values(\"wine\")\n",
-    "        ref = df.loc[idx[:, :, \"ref\"], :].pipe(\n",
-    "            lambda df: df.set_axis(\n",
-    "                df.index.remove_unused_levels().set_levels(level=[\"wine\"], levels=[wine])\n",
-    "            )\n",
-    "        )\n",
-    "\n",
-    "    # assign row and column identifier to reference and sample rows\n",
-    "    \n",
-    "    col2 = pd.concat([sample, ref]).assign(col=2)\n",
-    "    \n",
-    "    return col2\n",
-    "\n",
-    "\n",
-    "def build_col3(df, samplecode):\n",
-    "    \"\"\"\n",
-    "    combined query and aligned\n",
-    "    \"\"\"\n",
-    "\n",
-    "    if samplecode=='176':\n",
-    "        col3 = df.loc[[samplecode]].assign(col=3)\n",
+    "        self.column_index_df = df.columns.to_frame(index=False).set_index([\"samplecode\", \"wine\", \"state\"]).loc[lambda df: ~df.index.duplicated(keep='first'),:]\n",
     "        \n",
-    "    else:\n",
-    "        col3 = df.loc[idx[samplecode, :, [\"query\", \"aligned\"]], :].assign(col=3)\n",
+    "        samples = self.column_index_df.index.get_level_values(\"samplecode\").unique()\n",
+    "        \n",
+    "        \n",
+    "        col1 = pd.concat([self.build_col1(sample) for sample in samples])\n",
+    "        col1 = col1.assign(row=col1.groupby(\"wine\").ngroup() + 1)\n",
+    "        col2 = pd.concat([self.build_col2(sample) for sample in samples]).assign(\n",
+    "            row=lambda df: df.groupby(\"wine\").ngroup() + 1\n",
+    "        )\n",
+    "        col3 = pd.concat([self.build_col3(sample) for sample in samples]).assign(\n",
+    "            row=lambda df: df.groupby(\"wine\").ngroup() + 1\n",
+    "        )\n",
     "\n",
-    "    return col3\n",
+    "        self.index_df = pd.concat([col1, col2, col3])\n",
+    "    \n",
+    "    # get sample row\n",
+    "    def build_col1(self, samplecode):\n",
+    "        \"\"\"\n",
+    "        combine query and reference for overlaying in col1\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if samplecode=='176':\n",
+    "            sample = self.column_index_df.loc[idx[samplecode, :, \"ref\"], :]\n",
+    "        \n",
+    "        else:\n",
+    "            sample = self.column_index_df.loc[idx[samplecode, :, \"query\"], :]\n",
     "\n",
     "\n",
-    "col1 = pd.concat([build_col1(a, sample) for sample in samples])\n",
-    "col1 = col1.assign(row=col1.groupby(\"wine\").ngroup() + 1)\n",
-    "col2 = pd.concat([build_col2(a, sample) for sample in samples]).assign(\n",
-    "    row=lambda df: df.groupby(\"wine\").ngroup() + 1\n",
-    ")\n",
-    "col3 = pd.concat([build_col3(a, sample) for sample in samples]).assign(\n",
-    "    row=lambda df: df.groupby(\"wine\").ngroup() + 1\n",
-    ")\n",
+    "        # get the reference row, reindex it so its 'wine' (row) is s1\n",
+    "        \n",
+    "        if samplecode=='176':\n",
+    "            ref=self.column_index_df.loc[idx[:,:,'ref'],:]\n",
+    "        \n",
+    "        else:\n",
+    "            wine = sample.index.get_level_values(\"wine\")\n",
+    "            ref = self.column_index_df.loc[idx[:, :, \"ref\"], :].pipe(\n",
+    "                lambda df: df.set_axis(\n",
+    "                    df.index.remove_unused_levels().set_levels(level=[\"wine\"], levels=[wine])\n",
+    "                )\n",
+    "            )\n",
     "\n",
-    "index_df = pd.concat([col1, col2, col3])\n",
-    "# index_df = index_df[[\"row\", \"col\"]]\n",
+    "        # assign row and column identifier to reference and sample rows\n",
+    "        col1 = pd.concat([sample, ref]).assign(col=1)\n",
+    "\n",
+    "        return col1\n",
     "\n",
     "\n",
+    "    def build_col2(self, samplecode):\n",
+    "        \"\"\"\n",
+    "        combine aligned and reference for overlaying in col1\n",
+    "        \"\"\"\n",
+    "        if samplecode=='176':\n",
+    "            sample = self.column_index_df.loc[idx[samplecode, :, \"ref\"], :]\n",
+    "        \n",
+    "        else:\n",
+    "            sample = self.column_index_df.loc[idx[samplecode, :, \"aligned\"], :]\n",
+    "\n",
+    "\n",
+    "        # get the reference row, reindex it so its 'wine' (row) is s1\n",
+    "        \n",
+    "        if samplecode=='176':\n",
+    "            ref=sample.copy()\n",
+    "        \n",
+    "        else:\n",
+    "            wine = sample.index.get_level_values(\"wine\")\n",
+    "            ref = self.column_index_df.loc[idx[:, :, \"ref\"], :].pipe(\n",
+    "                lambda df: df.set_axis(\n",
+    "                    df.index.remove_unused_levels().set_levels(level=[\"wine\"], levels=[wine])\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "        # assign row and column identifier to reference and sample rows\n",
+    "        \n",
+    "        col2 = pd.concat([sample, ref]).assign(col=2)\n",
+    "        \n",
+    "        return col2\n",
+    "\n",
+    "\n",
+    "    def build_col3(self, samplecode):\n",
+    "        \"\"\"\n",
+    "        combined query and aligned\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if samplecode=='176':\n",
+    "            col3 = self.column_index_df.loc[[samplecode]].assign(col=3)\n",
+    "            \n",
+    "        else:\n",
+    "            col3 = self.column_index_df.loc[idx[samplecode, :, [\"query\", \"aligned\"]], :].assign(col=3)\n",
+    "\n",
+    "        return col3\n",
+    "\n",
+    "index_df = RelPlotIndexBuilder(df).index_df\n",
     "\n",
     "index_df.set_index([\"row\", \"col\"], append=True).reorder_levels(\n",
     "    [\"row\", \"col\", \"wine\", \"state\",\"samplecode\"]\n",
@@ -782,7 +774,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# can we just reindex the original df?\n",
+    "# join 'index_df' with original df to get the series data\n",
     "\n",
     "\n",
     "def join_df_index_df(df, index_df):\n",
@@ -799,40 +791,12 @@
     "    )\n",
     "\n",
     "    pindex_df = index_df.reset_index().set_index([\"samplecode\",'state'])\n",
-    "    display('pindex_df')\n",
-    "    display(pindex_df)\n",
-    "    display('pdf')\n",
-    "    display(pdf)\n",
     "    join = pindex_df.join(pdf, how='left').dropna()\n",
     "\n",
     "    return join\n",
     "\n",
     "\n",
-    "relplotdata = join_df_index_df(df, index_df)\n",
-    "display(relplotdata)\n",
-    "display(relplotdata.describe())\n",
-    "display(relplotdata.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert timedelta to float\n",
-    "\n",
-    "relplotdata = relplotdata.assign(mins=lambda df: df.mins.dt.total_seconds() / 60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_means = df.mean().to_frame(\"mean\").reset_index().set_index(\"mean\")\n",
-    "df_means"
+    "relplotdata = join_df_index_df(df, index_df)"
    ]
   },
   {
@@ -843,10 +807,10 @@
    "source": [
     "# check if joins acted as expected by calulating an aggregation statisic, say mean.\n",
     "\n",
+    "df_means = df.mean().to_frame(\"mean\").round(10).reset_index().set_index(\"mean\")\n",
     "\n",
     "post_join_means = (\n",
-    "    relplotdata.groupby([\"samplecode\", \"wine\", \"state\", \"row\", \"col\"])[\"value\"]\n",
-    "    .mean()\n",
+    "    relplotdata.groupby([\"samplecode\", \"wine\", \"state\", \"row\", \"col\"])[\"value\"].apply(lambda df: df.mean().round(10))\n",
     "    .to_frame(name=\"mean\")\n",
     ")\n",
     "\n",
@@ -854,51 +818,9 @@
     "    post_join_means.reorder_levels([\"row\", \"col\", \"samplecode\", \"wine\", \"state\"])\n",
     "    .reset_index()\n",
     "    .set_index(\"mean\")\n",
-    "    .\n",
+    "    .loc[lambda df: ~df.index.duplicated(keep='first')]\n",
     ")\n",
-    "post_join_means"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_means.loc[lambda df: ~df.index.duplicated(keep='first'),:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_join_means.join(df_means, lsuffix=\"left\", rsuffix=\"right\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.concat([df_means, post_join_means],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    relplotdata.set_index([\"row\", \"col\"], append=True)\n",
-    "    .loc[idx[:, 1, 3]]\n",
-    "    .pipe(lambda df: df if display(df) else df)  # display df\n",
-    "    #  .reset_index()\n",
-    "    .pipe(sns.relplot, x=\"mins\", y=\"value\", hue=\"state\", legend=\"full\", kind=\"line\")\n",
-    ")"
+    "post_join_means.join(df_means, rsuffix=\"right\")"
    ]
   },
   {
@@ -910,7 +832,8 @@
     "# now display it..\n",
     "\n",
     "sns.relplot(\n",
-    "    relplotdata,\n",
+    "    # convert timedelta to float    \n",
+    "    relplotdata.assign(mins=lambda df: df.mins.dt.total_seconds() / 60),\n",
     "    col=\"col\",\n",
     "    row=\"row\",\n",
     "    x=\"mins\",\n",
@@ -918,120 +841,8 @@
     "    hue=\"state\",\n",
     "    kind=\"line\",\n",
     "    legend=\"full\",\n",
+    "    \n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col1 = df.loc[idx[:, :, [\"query\", \"ref\"], \"bcorr\"], :].assign(col=\"col1\")\n",
-    "display(col1)\n",
-    "\n",
-    "col2 = (\n",
-    "    pd.concat(\n",
-    "        [\n",
-    "            df.loc[idx[:, :, \"query\", \"aligned\"], :],\n",
-    "            df.loc[idx[:, :, \"ref\", \"bcorr\"], :],\n",
-    "        ]\n",
-    "    )\n",
-    "    .sort_index()\n",
-    "    .assign(col=\"col2\")\n",
-    ")\n",
-    "\n",
-    "display(col2)\n",
-    "\n",
-    "col3 = (\n",
-    "    pd.concat(\n",
-    "        [\n",
-    "            df.loc[idx[:, :, \"query\", \"bcorr\"], :],\n",
-    "            df.loc[idx[:, :, \"query\", \"aligned\"], :],\n",
-    "        ]\n",
-    "    )\n",
-    "    .sort_index()\n",
-    "    .assign(col=\"col3\")\n",
-    ")\n",
-    "\n",
-    "display(col3)\n",
-    "\n",
-    "pdata = pd.concat([col1, col2, col3]).sort_index()\n",
-    "pdata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sp3 = a[(a['role']=='query') & (a['signal']=='bcorr') | (a['role']=='query') & (a['signal']=='aligned')].assign(subplot='3')\n",
-    "\n",
-    "# display(sp3)\n",
-    "\n",
-    "# subplots_index = pd.concat([sp1,sp2,sp3], ignore_index=True)\n",
-    "\n",
-    "# subplots_index.set_index(['samplecode','wine','role','signal'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use `relplot` rather than FacetGrid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_df = df.reindex(pd.MultiIndex.from_frame(subplots_index), axis=1)\n",
-    "plot_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    plot_df.melt(ignore_index=False, value_name=\"mAU\").pipe(\n",
-    "        lambda df: sns.FacetGrid(df, col=\"subplot\", row=\"wine\")\n",
-    "        .map_dataframe(sns.lineplot, x=\"mins\", y=\"mAU\", hue=\"role\")\n",
-    "        .add_legend()\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(sns.relplot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(df.columns)"
    ]
   }
  ],
