add test to make sure index_df output is expected for the input while refactoring the RelPlotBuilder class
Former-commit-id: cb377a44e7820d417382880943173845d2576ef3
Former-commit-id: 034d98f31d00dbd7acffc7dd20b2d11d1c24b901

--- a/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
@@ -674,8 +674,7 @@
     "        samples = self.column_index_df.index.get_level_values(\"samplecode\").unique()\n",
     "        \n",
     "        \n",
-    "        col1 = pd.concat([self.build_col1(sample) for sample in samples])\n",
-    "        col1 = col1.assign(row=col1.groupby(\"wine\").ngroup() + 1)\n",
+    "        col1 = pd.concat([self.build_col1(sample, '176', 'query',1) for sample in samples]).assign(row=lambda df: df.groupby(\"wine\").ngroup() + 1)\n",
     "        col2 = pd.concat([self.build_col2(sample) for sample in samples]).assign(\n",
     "            row=lambda df: df.groupby(\"wine\").ngroup() + 1\n",
     "        )\n",
@@ -686,21 +685,21 @@
     "        self.index_df = pd.concat([col1, col2, col3])\n",
     "    \n",
     "    # get sample row\n",
-    "    def build_col1(self, samplecode):\n",
+    "    def build_col1(self, samplecode, ref_samplecode, state_val, colnum):\n",
     "        \"\"\"\n",
     "        combine query and reference for overlaying in col1\n",
     "        \"\"\"\n",
     "        \n",
-    "        if samplecode=='176':\n",
+    "        if samplecode==ref_samplecode:\n",
     "            sample = self.column_index_df.loc[idx[samplecode, :, \"ref\"], :]\n",
     "        \n",
     "        else:\n",
-    "            sample = self.column_index_df.loc[idx[samplecode, :, \"query\"], :]\n",
+    "            sample = self.column_index_df.loc[idx[samplecode, :, state_val], :]\n",
     "\n",
     "\n",
     "        # get the reference row, reindex it so its 'wine' (row) is s1\n",
     "        \n",
-    "        if samplecode=='176':\n",
+    "        if samplecode==ref_samplecode:\n",
     "            ref=self.column_index_df.loc[idx[:,:,'ref'],:]\n",
     "        \n",
     "        else:\n",
@@ -712,7 +711,7 @@
     "            )\n",
     "\n",
     "        # assign row and column identifier to reference and sample rows\n",
-    "        col1 = pd.concat([sample, ref]).assign(col=1)\n",
+    "        col1 = pd.concat([sample, ref]).assign(col=colnum)\n",
     "\n",
     "        return col1\n",
     "\n",
@@ -774,6 +773,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the expected output of RelPlotIndexBuilder.index_df. orient = 'tight' retains multiindex\n",
+    "\n",
+    "a = pd.DataFrame.from_dict(\n",
+    "    {'index': [('154', '2020 leeuwin estate shiraz art series', 'query'),\n",
+    "  ('176', '2020 leeuwin estate shiraz art series', 'ref'),\n",
+    "  ('176', '2021 john duval wines shiraz concilio', 'ref'),\n",
+    "  ('176', '2021 john duval wines shiraz concilio', 'ref'),\n",
+    "  ('177', '2021 torbreck shiraz the struie 1', 'query'),\n",
+    "  ('176', '2021 torbreck shiraz the struie 1', 'ref'),\n",
+    "  ('torbreck-struie', '2021 torbreck shiraz the struie 2', 'query'),\n",
+    "  ('176', '2021 torbreck shiraz the struie 2', 'ref'),\n",
+    "  ('154', '2020 leeuwin estate shiraz art series', 'aligned'),\n",
+    "  ('176', '2020 leeuwin estate shiraz art series', 'ref'),\n",
+    "  ('176', '2021 john duval wines shiraz concilio', 'ref'),\n",
+    "  ('176', '2021 john duval wines shiraz concilio', 'ref'),\n",
+    "  ('177', '2021 torbreck shiraz the struie 1', 'aligned'),\n",
+    "  ('176', '2021 torbreck shiraz the struie 1', 'ref'),\n",
+    "  ('torbreck-struie', '2021 torbreck shiraz the struie 2', 'aligned'),\n",
+    "  ('176', '2021 torbreck shiraz the struie 2', 'ref'),\n",
+    "  ('154', '2020 leeuwin estate shiraz art series', 'query'),\n",
+    "  ('154', '2020 leeuwin estate shiraz art series', 'aligned'),\n",
+    "  ('176', '2021 john duval wines shiraz concilio', 'ref'),\n",
+    "  ('177', '2021 torbreck shiraz the struie 1', 'query'),\n",
+    "  ('177', '2021 torbreck shiraz the struie 1', 'aligned'),\n",
+    "  ('torbreck-struie', '2021 torbreck shiraz the struie 2', 'query'),\n",
+    "  ('torbreck-struie', '2021 torbreck shiraz the struie 2', 'aligned')],\n",
+    " 'columns': ['col', 'row'],\n",
+    " 'data': [[1, 1],\n",
+    "  [1, 1],\n",
+    "  [1, 2],\n",
+    "  [1, 2],\n",
+    "  [1, 3],\n",
+    "  [1, 3],\n",
+    "  [1, 4],\n",
+    "  [1, 4],\n",
+    "  [2, 1],\n",
+    "  [2, 1],\n",
+    "  [2, 2],\n",
+    "  [2, 2],\n",
+    "  [2, 3],\n",
+    "  [2, 3],\n",
+    "  [2, 4],\n",
+    "  [2, 4],\n",
+    "  [3, 1],\n",
+    "  [3, 1],\n",
+    "  [3, 2],\n",
+    "  [3, 3],\n",
+    "  [3, 3],\n",
+    "  [3, 4],\n",
+    "  [3, 4]],\n",
+    " 'index_names': ['samplecode', 'wine', 'state'],\n",
+    " 'column_names': [None]}\n",
+    "    , orient='tight'\n",
+    ")\n",
+    "\n",
+    "pd.testing.assert_frame_equal(left=a, right=index_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# join 'index_df' with original df to get the series data\n",
     "\n",
     "\n",
@@ -820,7 +883,8 @@
     "    .set_index(\"mean\")\n",
     "    .loc[lambda df: ~df.index.duplicated(keep='first')]\n",
     ")\n",
-    "post_join_means.join(df_means, rsuffix=\"right\")"
+    "post_join_means = post_join_means.join(df_means, rsuffix=\"right\")\n",
+    "post_join_means"
    ]
   },
   {
