--- a/src/wine_analysis_hplc_uv/notebooks/plotting_cheatsheet.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/plotting_cheatsheet.ipynb
@@ -24,6 +24,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Seaborn\n",
+    "\n",
+    "In relplots (and probably line plots), turn error bars off with `errorbar=None` to dramatically speed up plotting time. Example:\n",
+    "\n",
+    "```python\n",
+    "(\n",
+    "    sns.relplot(\n",
+    "        relplotdata,\n",
+    "        col=\"col_label\",\n",
+    "        row=\"wine\",\n",
+    "        x=\"mins\",\n",
+    "        y=\"mAU\",\n",
+    "        hue=\"state\",\n",
+    "        kind=\"line\",\n",
+    "        legend=\"full\",\n",
+    "        facet_kws=dict(margin_titles=True,\n",
+    "                       subplot_kws=dict(alpha=0.95)),\n",
+    "        errorbar=None\n",
+    "        \n",
+    "    )\n",
+    "    .set_titles(\n",
+    "        col_template=\"{col_name}\",\n",
+    "        row_template=\"{row_name}\",\n",
+    "    )\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "speeds up the plotting of that particular figure from 1 min 40 seconds to 4.2 seconds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "legend can be added by calling `.add_legend` on Axes object returned by FacetGrid mapping"
    ]
   }
