--- a/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
@@ -519,10 +519,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add '(ref)' suffix to the reference wine of the dataset\n",
+    "\n",
+    "def label_reference(df, ref):\n",
+    "    \"\"\"\n",
+    "    add suffix '(ref)' to wine string of reference sample\n",
+    "    \"\"\"\n",
+    "    oname = df[ref].columns.get_level_values('wine')[0]\n",
+    "    new_name = oname + \" (ref)\"\n",
+    "\n",
+    "    return df.rename({oname:new_name},axis=1)\n",
+    "\n",
+    "df = label_reference(df, ref)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "It does, 176 is now the most correlated.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -603,18 +632,15 @@
     "# get the reference\n",
     "\n",
     "\n",
-    "\n",
-    "new_index_ = (df\n",
-    " .columns\n",
-    " .to_frame(index=False)\n",
-    " .assign(state=lambda df: df\n",
-    "         .signal\n",
-    "         .where(~(df.signal=='aligned'),'aligned')\n",
-    "         .where(~(df.signal=='bcorr'),'query')\n",
-    "         .where(~(df.role=='ref'),'ref')\n",
-    "         )\n",
-    " .drop(['role','signal'],axis=1)\n",
-    " )"
+    "new_index_ = (\n",
+    "    df.columns.to_frame(index=False)\n",
+    "    .assign(\n",
+    "        state=lambda df: df.signal.where(~(df.signal == \"aligned\"), \"aligned\")\n",
+    "        .where(~(df.signal == \"bcorr\"), \"query\")\n",
+    "        .where(~(df.role == \"ref\"), \"ref\")\n",
+    "    )\n",
+    "    .drop([\"role\", \"signal\"], axis=1)\n",
+    ")"
    ]
   },
   {
@@ -623,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_index=pd.MultiIndex.from_frame(new_index_)\n",
+    "new_index = pd.MultiIndex.from_frame(new_index_)\n",
     "df = df.set_axis(new_index, axis=1)"
    ]
   },
@@ -672,12 +698,12 @@
     "        |  5 | 177             | 2021 torbreck shiraz the struie 1     | query   |\n",
     "        |  6 | torbreck-struie | 2021 torbreck shiraz the struie 2     | aligned |\n",
     "        |  7 | torbreck-struie | 2021 torbreck shiraz the struie 2     | query   |\n",
-    "        \n",
+    "\n",
     "        It is generalized enough to handle any names for the levels, and any values\n",
     "        (as long as the pattern is consistant), however the 'samplecode' and 'state'\n",
     "        levels must be in the same order, seperated by 1 level.\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        self.df = df\n",
     "\n",
     "        # create a df out of the df multiindex, drop any duplicates.\n",
@@ -711,13 +737,12 @@
     "\n",
     "        # combine all the col dfs\n",
     "        self.index_df = pd.concat([col1, col2, col3])\n",
-    "        \n",
+    "\n",
     "        self.test_index_df()\n",
-    "        \n",
+    "\n",
     "        self.join_df = self.join_df_index_df()\n",
-    "        \n",
+    "\n",
     "        self.test_join_df()\n",
-    "        \n",
     "\n",
     "    def build_col(self, samplecode_1, samplecode_2, state_val_1, state_val_2, colnum):\n",
     "        \"\"\"\n",
@@ -773,108 +798,109 @@
     "            ].assign(col=colnum)\n",
     "\n",
     "        return col3\n",
-    "    \n",
+    "\n",
     "    def test_index_df(self):\n",
     "        \"\"\"\n",
     "        test whether the output ready index_df matches the expected content and structure\n",
     "        \"\"\"\n",
     "        # the expected output of RelPlotIndexBuilder.index_df. orient = 'tight' retains multiindex\n",
-    "        \n",
+    "\n",
     "        left = pd.DataFrame.from_dict(\n",
-    "        {\n",
-    "            \"index\": [\n",
-    "                (\"154\", \"2020 leeuwin estate shiraz art series\", \"query\"),\n",
-    "                (\"176\", \"2020 leeuwin estate shiraz art series\", \"ref\"),\n",
-    "                (\"176\", \"2021 john duval wines shiraz concilio\", \"ref\"),\n",
-    "                (\"176\", \"2021 john duval wines shiraz concilio\", \"ref\"),\n",
-    "                (\"177\", \"2021 torbreck shiraz the struie 1\", \"query\"),\n",
-    "                (\"176\", \"2021 torbreck shiraz the struie 1\", \"ref\"),\n",
-    "                (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"query\"),\n",
-    "                (\"176\", \"2021 torbreck shiraz the struie 2\", \"ref\"),\n",
-    "                (\"154\", \"2020 leeuwin estate shiraz art series\", \"aligned\"),\n",
-    "                (\"176\", \"2020 leeuwin estate shiraz art series\", \"ref\"),\n",
-    "                (\"176\", \"2021 john duval wines shiraz concilio\", \"ref\"),\n",
-    "                (\"176\", \"2021 john duval wines shiraz concilio\", \"ref\"),\n",
-    "                (\"177\", \"2021 torbreck shiraz the struie 1\", \"aligned\"),\n",
-    "                (\"176\", \"2021 torbreck shiraz the struie 1\", \"ref\"),\n",
-    "                (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"aligned\"),\n",
-    "                (\"176\", \"2021 torbreck shiraz the struie 2\", \"ref\"),\n",
-    "                (\"154\", \"2020 leeuwin estate shiraz art series\", \"query\"),\n",
-    "                (\"154\", \"2020 leeuwin estate shiraz art series\", \"aligned\"),\n",
-    "                (\"176\", \"2021 john duval wines shiraz concilio\", \"ref\"),\n",
-    "                (\"177\", \"2021 torbreck shiraz the struie 1\", \"query\"),\n",
-    "                (\"177\", \"2021 torbreck shiraz the struie 1\", \"aligned\"),\n",
-    "                (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"query\"),\n",
-    "                (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"aligned\"),\n",
-    "            ],\n",
-    "            \"columns\": [\"col\", \"row\"],\n",
-    "            \"data\": [\n",
-    "                [1, 1],\n",
-    "                [1, 1],\n",
-    "                [1, 2],\n",
-    "                [1, 2],\n",
-    "                [1, 3],\n",
-    "                [1, 3],\n",
-    "                [1, 4],\n",
-    "                [1, 4],\n",
-    "                [2, 1],\n",
-    "                [2, 1],\n",
-    "                [2, 2],\n",
-    "                [2, 2],\n",
-    "                [2, 3],\n",
-    "                [2, 3],\n",
-    "                [2, 4],\n",
-    "                [2, 4],\n",
-    "                [3, 1],\n",
-    "                [3, 1],\n",
-    "                [3, 2],\n",
-    "                [3, 3],\n",
-    "                [3, 3],\n",
-    "                [3, 4],\n",
-    "                [3, 4],\n",
-    "            ],\n",
-    "            \"index_names\": [\"samplecode\", \"wine\", \"state\"],\n",
-    "            \"column_names\": [None],\n",
-    "        },\n",
-    "        orient=\"tight\",\n",
+    "            {\n",
+    "                \"index\": [\n",
+    "                    (\"154\", \"2020 leeuwin estate shiraz art series\", \"query\"),\n",
+    "                    (\"176\", \"2020 leeuwin estate shiraz art series\", \"ref\"),\n",
+    "                    (\"176\", \"2021 john duval wines shiraz concilio (ref)\", \"ref\"),\n",
+    "                    (\"176\", \"2021 john duval wines shiraz concilio (ref)\", \"ref\"),\n",
+    "                    (\"177\", \"2021 torbreck shiraz the struie 1\", \"query\"),\n",
+    "                    (\"176\", \"2021 torbreck shiraz the struie 1\", \"ref\"),\n",
+    "                    (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"query\"),\n",
+    "                    (\"176\", \"2021 torbreck shiraz the struie 2\", \"ref\"),\n",
+    "                    (\"154\", \"2020 leeuwin estate shiraz art series\", \"aligned\"),\n",
+    "                    (\"176\", \"2020 leeuwin estate shiraz art series\", \"ref\"),\n",
+    "                    (\"176\", \"2021 john duval wines shiraz concilio (ref)\", \"ref\"),\n",
+    "                    (\"176\", \"2021 john duval wines shiraz concilio (ref)\", \"ref\"),\n",
+    "                    (\"177\", \"2021 torbreck shiraz the struie 1\", \"aligned\"),\n",
+    "                    (\"176\", \"2021 torbreck shiraz the struie 1\", \"ref\"),\n",
+    "                    (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"aligned\"),\n",
+    "                    (\"176\", \"2021 torbreck shiraz the struie 2\", \"ref\"),\n",
+    "                    (\"154\", \"2020 leeuwin estate shiraz art series\", \"query\"),\n",
+    "                    (\"154\", \"2020 leeuwin estate shiraz art series\", \"aligned\"),\n",
+    "                    (\"176\", \"2021 john duval wines shiraz concilio (ref)\", \"ref\"),\n",
+    "                    (\"177\", \"2021 torbreck shiraz the struie 1\", \"query\"),\n",
+    "                    (\"177\", \"2021 torbreck shiraz the struie 1\", \"aligned\"),\n",
+    "                    (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"query\"),\n",
+    "                    (\"torbreck-struie\", \"2021 torbreck shiraz the struie 2\", \"aligned\"),\n",
+    "                ],\n",
+    "                \"columns\": [\"col\", \"row\"],\n",
+    "                \"data\": [\n",
+    "                    [1, 1],\n",
+    "                    [1, 1],\n",
+    "                    [1, 2],\n",
+    "                    [1, 2],\n",
+    "                    [1, 3],\n",
+    "                    [1, 3],\n",
+    "                    [1, 4],\n",
+    "                    [1, 4],\n",
+    "                    [2, 1],\n",
+    "                    [2, 1],\n",
+    "                    [2, 2],\n",
+    "                    [2, 2],\n",
+    "                    [2, 3],\n",
+    "                    [2, 3],\n",
+    "                    [2, 4],\n",
+    "                    [2, 4],\n",
+    "                    [3, 1],\n",
+    "                    [3, 1],\n",
+    "                    [3, 2],\n",
+    "                    [3, 3],\n",
+    "                    [3, 3],\n",
+    "                    [3, 4],\n",
+    "                    [3, 4],\n",
+    "                ],\n",
+    "                \"index_names\": [\"samplecode\", \"wine\", \"state\"],\n",
+    "                \"column_names\": [None],\n",
+    "            },\n",
+    "            orient=\"tight\",\n",
     "        )\n",
     "\n",
     "        pd.testing.assert_frame_equal(left=left, right=self.index_df)\n",
-    "        \n",
+    "\n",
     "    def join_df_index_df(self):\n",
     "        \"\"\"\n",
     "        massage df and index_df to left join onto index_df\n",
     "        \"\"\"\n",
     "\n",
-    "        pdf =(\n",
-    "            self.df\n",
-    "            .melt(ignore_index=False)\n",
+    "        pdf = (\n",
+    "            self.df.melt(ignore_index=False, value_name='mAU')\n",
     "            .reset_index()\n",
-    "            .set_index(['samplecode','state'])\n",
-    "            .drop('wine',axis=1) \n",
+    "            .set_index([\"samplecode\", \"state\"])\n",
+    "            .drop(\"wine\", axis=1)\n",
     "        )\n",
     "\n",
-    "        pindex_df = self.index_df.reset_index().set_index([\"samplecode\",'state'])\n",
-    "        join = pindex_df.join(pdf, how='left').dropna()\n",
+    "        pindex_df = self.index_df.reset_index().set_index([\"samplecode\", \"state\"])\n",
+    "        join = pindex_df.join(pdf, how=\"left\").dropna()\n",
     "\n",
     "        return join\n",
-    "    \n",
-    "    def test_join_df(self)->None:\n",
+    "\n",
+    "    def test_join_df(self) -> None:\n",
     "        \"\"\"\n",
     "        Take the source df and join df and check whether the join is as expected. Specifically\n",
     "        make sure that the relationship between the labels and series values has been maintained.\n",
-    "        \n",
+    "\n",
     "        Calculates the mean value of each series in both the base df and join_df then join\n",
     "        the two on the mean column. Then checks for any mismatch by checking for NAs in\n",
     "        result.\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        # calculate base df mean rounded to 10 digits and modify index to the 'mean' column\n",
-    "        df_means = self.df.mean().to_frame(\"mean\").round(10).reset_index().set_index(\"mean\")\n",
+    "        df_means = (\n",
+    "            self.df.mean().to_frame(\"mean\").round(10).reset_index().set_index(\"mean\")\n",
+    "        )\n",
     "\n",
     "        # calculate join df mean rounded to 10 digits and modify index to the 'mean' column\n",
     "        post_join_means = (\n",
-    "            self.join_df.groupby([\"samplecode\", \"wine\", \"state\", \"row\", \"col\"])[\"value\"]\n",
+    "            self.join_df.groupby([\"samplecode\", \"wine\", \"state\", \"row\", \"col\"])[\"mAU\"]\n",
     "            .apply(lambda df: df.mean().round(10))\n",
     "            .to_frame(name=\"mean\")\n",
     "            .reorder_levels([\"row\", \"col\", \"samplecode\", \"wine\", \"state\"])\n",
@@ -902,7 +928,45 @@
     "            f\" following\\n{mean_join[mean_join.isna().any(axis=1)]}\"\n",
     "        )\n",
     "\n",
+    "\n",
     "relplotdata = RelPlotDFBuilder(df).join_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relplotdata = (\n",
+    "    relplotdata.assign(mins=lambda df: df.mins.dt.total_seconds() / 60)\n",
+    "    .assign(\n",
+    "        col_label=lambda df: df.col.replace(\n",
+    "            {\n",
+    "                1: \"query and ref\",\n",
+    "                2: \"aligned and ref\",\n",
+    "                3: \"query and aligned\",\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
+    "    .assign(\n",
+    "        col_label=lambda df: pd.Categorical(\n",
+    "            values=df.col_label,\n",
+    "            categories=[\n",
+    "                \"query and ref\",\n",
+    "                \"aligned and ref\",\n",
+    "                \"query and aligned\",\n",
+    "            ],\n",
+    "            ordered=True,\n",
+    "        )\n",
+    "    )\n",
+    "    .reset_index()\n",
+    "    .set_index([\"row\", \"col\", \"col_label\", \"samplecode\", \"state\", \"wine\"])\n",
+    "    # .loc[idx[:,:,:,'154']].index.to_frame()\n",
+    "    # .loc[lambda df: ~df.index.duplicated(keep='first')]\n",
+    "    # .reset_index(drop=True)\n",
+    "    # .set_index(['row','col'])\n",
+    ")"
    ]
   },
   {
@@ -913,17 +977,28 @@
    "source": [
     "# now display it..\n",
     "\n",
-    "sns.relplot(\n",
-    "    # convert timedelta to float    \n",
-    "    relplotdata.assign(mins=lambda df: df.mins.dt.total_seconds() / 60),\n",
-    "    col=\"col\",\n",
-    "    row=\"row\",\n",
-    "    x=\"mins\",\n",
-    "    y=\"value\",\n",
-    "    hue=\"state\",\n",
-    "    kind=\"line\",\n",
-    "    legend=\"full\",\n",
-    ")"
+    "relplot = (\n",
+    "    sns.relplot(\n",
+    "        relplotdata,\n",
+    "        col=\"col_label\",\n",
+    "        row=\"wine\",\n",
+    "        x=\"mins\",\n",
+    "        y=\"mAU\",\n",
+    "        hue=\"state\",\n",
+    "        kind=\"line\",\n",
+    "        legend=\"full\",\n",
+    "        facet_kws=dict(margin_titles=True,\n",
+    "                       subplot_kws=dict(alpha=0.95)),\n",
+    "        errorbar=None,\n",
+    "        palette=sns.color_palette(n_colors=3, palette='colorblind')\n",
+    "    )\n",
+    "    .set_titles(\n",
+    "        col_template=\"{col_name}\",\n",
+    "        row_template=\"{row_name}\",\n",
+    "    )\n",
+    ")\n",
+    "relplot.fig.suptitle('Comparison of Query and Reference Aligned Before and After DTW', fontsize=16)\n",
+    "relplot.fig.subplots_adjust(top=0.93)"
    ]
   }
  ],
