move Signal Processing chapter notebook to /notebooks
Former-commit-id: c85649a304c3e2119fb15dea960f312ab1d7aba7
Former-commit-id: 7385b33bcffa075db0b10775597823ae936aff6a

--- a/src/wine_analysis_hplc_uv/notebooks/chapter_signal_preprocessing.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/chapter_signal_preprocessing.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "### DTW\n",
     "\n",
-    "A method of applying DTW utilising `most_correlated` will be developed in [Dynamic Time Warping](././src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb)"
+    "A method of applying DTW utilising `most_correlated` will be developed in [Dynamic Time Warping](././src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb). We found that a global constraint of the algorithm using a Sakoe-Chiba window with size 10 resulted in alignment without query peak deformation. We also found that baseline correction was necessary to improve warping, specifically a curve was fitted with ASLS with a lam of 1000."
    ]
   },
   {
