begin classification modeling chapter, formalise methods developed for alignment into a class based pipe, create a full cuprac shz red wine test set, add jupyter cheatsheet, add thesis top level page. Formatting.
Former-commit-id: 9836d2c059785b24a61a6c896b05965c8fbd129e
Former-commit-id: 22884234549c7c611673024008bbedaa1d9f18bc

--- a/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
@@ -464,17 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find a way to construct the subplot dataset through groupby on sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generate a 2x2 plot grid of each sample with an overlay of the raw, the baseline and\n",
-    "# the bcorr signals\n",
+    "# baseline correct all samples\n",
     "\n",
     "df = (\n",
     "    df.melt(ignore_index=False, value_name=\"raw\")\n",
@@ -490,6 +480,17 @@
     "    .reorder_levels(axis=1, order=[\"samplecode\", \"wine\", \"signal\"])\n",
     "    .sort_index(axis=1)\n",
     ")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a 2x2 plot grid of each sample with an overlay of the raw, the baseline and\n",
+    "# the bcorr signals\n",
     "\n",
     "(\n",
     "    df.melt(ignore_index=False, value_name=\"mAU\")\n",
@@ -526,14 +527,16 @@
    "source": [
     "# add '(ref)' suffix to the reference wine of the dataset\n",
     "\n",
+    "\n",
     "def label_reference(df, ref):\n",
     "    \"\"\"\n",
     "    add suffix '(ref)' to wine string of reference sample\n",
     "    \"\"\"\n",
-    "    oname = df[ref].columns.get_level_values('wine')[0]\n",
+    "    oname = df[ref].columns.get_level_values(\"wine\")[0]\n",
     "    new_name = oname + \" (ref)\"\n",
     "\n",
-    "    return df.rename({oname:new_name},axis=1)\n",
+    "    return df.rename({oname: new_name}, axis=1)\n",
+    "\n",
     "\n",
     "df = label_reference(df, ref)"
    ]
@@ -543,15 +546,6 @@
    "metadata": {},
    "source": [
     "It does, 176 is now the most correlated.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
    ]
   },
   {
@@ -630,7 +624,6 @@
     "\n",
     "\n",
     "# get the reference\n",
-    "\n",
     "\n",
     "new_index_ = (\n",
     "    df.columns.to_frame(index=False)\n",
@@ -872,7 +865,7 @@
     "        \"\"\"\n",
     "\n",
     "        pdf = (\n",
-    "            self.df.melt(ignore_index=False, value_name='mAU')\n",
+    "            self.df.melt(ignore_index=False, value_name=\"mAU\")\n",
     "            .reset_index()\n",
     "            .set_index([\"samplecode\", \"state\"])\n",
     "            .drop(\"wine\", axis=1)\n",
@@ -962,10 +955,6 @@
     "    )\n",
     "    .reset_index()\n",
     "    .set_index([\"row\", \"col\", \"col_label\", \"samplecode\", \"state\", \"wine\"])\n",
-    "    # .loc[idx[:,:,:,'154']].index.to_frame()\n",
-    "    # .loc[lambda df: ~df.index.duplicated(keep='first')]\n",
-    "    # .reset_index(drop=True)\n",
-    "    # .set_index(['row','col'])\n",
     ")"
    ]
   },
@@ -977,28 +966,42 @@
    "source": [
     "# now display it..\n",
     "\n",
-    "relplot = (\n",
-    "    sns.relplot(\n",
-    "        relplotdata,\n",
-    "        col=\"col_label\",\n",
-    "        row=\"wine\",\n",
-    "        x=\"mins\",\n",
-    "        y=\"mAU\",\n",
-    "        hue=\"state\",\n",
-    "        kind=\"line\",\n",
-    "        legend=\"full\",\n",
-    "        facet_kws=dict(margin_titles=True,\n",
-    "                       subplot_kws=dict(alpha=0.95)),\n",
-    "        errorbar=None,\n",
-    "        palette=sns.color_palette(n_colors=3, palette='colorblind')\n",
-    "    )\n",
-    "    .set_titles(\n",
-    "        col_template=\"{col_name}\",\n",
-    "        row_template=\"{row_name}\",\n",
-    "    )\n",
+    "relplot = sns.relplot(\n",
+    "    relplotdata,\n",
+    "    col=\"col_label\",\n",
+    "    row=\"wine\",\n",
+    "    x=\"mins\",\n",
+    "    y=\"mAU\",\n",
+    "    hue=\"state\",\n",
+    "    kind=\"line\",\n",
+    "    legend=\"full\",\n",
+    "    facet_kws=dict(margin_titles=True, subplot_kws=dict(alpha=0.95)),\n",
+    "    errorbar=None,\n",
+    "    palette=sns.color_palette(n_colors=3, palette=\"colorblind\"),\n",
+    ").set_titles(\n",
+    "    col_template=\"{col_name}\",\n",
+    "    row_template=\"{row_name}\",\n",
     ")\n",
-    "relplot.fig.suptitle('Comparison of Query and Reference Aligned Before and After DTW', fontsize=16)\n",
+    "relplot.fig.suptitle(\n",
+    "    \"Comparison of Query and Reference Aligned Before and After DTW\", fontsize=16\n",
+    ")\n",
     "relplot.fig.subplots_adjust(top=0.93)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, the alignment is nominally successful for the samples within the set, remarkably even sample 177, which was the most divergent.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "We have visually shown the effectiveness of DTW with a Sakoe-Chiba global constraint and prior baseline-correction with asls for aligning CUPRAC detected shiraz wine chromatograms. Further investigation will require that I identify appropriate alignment and distance metrics rather than utilizing a visual check. Specifically, we've shown that peaks can be matched, however it is not evident if a mismatch is occuring - suspiciously, no peak remains unmatched in any sample.\n"
    ]
   }
  ],
